feat(mix-mastering): create with relation